<?xml version="1.0"?>
<package format="2">
  <name>flatland_plugins</name>
  <version>1.1.3</version>
  <description>Default plugins for flatland</description>
  <license>BSD</license>
  <url type="website">https://bitbucket.org/avidbots/flatland</url>

  <maintainer email="joseph@avidbots.com">Joseph Duchesne</maintainer>
  <author email="joseph@avidbots.com">Joseph Duchesne</author>
  <author>Chunshang Li</author>
  <author>Mike Brousseau</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>flatland_server</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>yaml-cpp</depend>
  <depend>cmake_modules</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>flatland_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <flatland_server plugin="${prefix}/flatland_plugins.xml" />
  </export>
</package>
